# aicontest.dev

./: Cargo.toml  Changelog.md  README.md  start_client.sh  start_server.sh  start_web.sh
common/: Cargo.toml
common/src/: consts.rs  game_state.rs  lib.rs  point.rs
example-client/: Cargo.toml
example-client/cpp/: player.cpp
example-client/python/: player.py
example-client/src/: main.rs
nginx/: aicontest.dev
prod/: start_client.sh  start_server.sh  start_web.sh
server/: Cargo.toml
server/src/: client.rs  connction.rs  consts.rs  engine.rs  game_state.rs  main.rs  password_manager.rs  player_move.rs  server.rs  top_results.rs
src/: connction.rs  consts.rs  engine.rs  game_state.rs  main.rs  point.rs  server.rs
web/: .gitignore  Cargo.toml  index.html
web/.cargo/: config
web/assets/: manifest.json
web/src/: fps_counter.rs  main.rs  state_approximator.rs  web_app.rs
