[package]
name = "game-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.61", features = ["WebSocket"] }
futures = "0.3.28"
gloo-timers = { version = "0.2.6", features = ["futures"] }

[build]
target = "wasm-unknown-unknown"